# ascii-d

./: .gitignore  ARCHITECT.md  Cargo.toml  DEVLOG.md  LICENSE  Makefile  PDEVLOG.md  README.md  ROADMAP.md  ascii-d.js  index.html  vercel.json
.github/: FUNDING.yml
.github/workflows/: main.yml  master.yml  release.yml
icons/: icon.icns
scripts/: pre-commit
src/: app.rs  consts.rs  data.rs  lib.rs  macros.rs  main.rs  state.rs
src/data/: grid_cell.rs  grid_list.rs  history.rs  mod.rs  overlap.rs  selection.rs  shape_list.rs
src/shapes/: block.rs  line.rs  mod.rs  rect.rs  text.rs
src/tools/: erase.rs  eraser.rs  joint_fixer.rs  line.rs  mod.rs  rect.rs  select.rs  text.rs
src/widgets/: grid.rs  image_button.rs  layout.rs  mod.rs  status_label.rs  toolbar.rs
www/: index.html  index.js
