[package]
description = "A cross-platform ASCII diagram editor"
name = "ascii-d"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid", version = "0.8.2", features = ["image", "png"] }
once_cell = "1.17.1"

[package.metadata.bundle]
copyright = "Copyright (c) Huy Tran 2023. All rights reserved."
icon = ["icons/icon.icns"]
identifier = "rocks.huy.ascii-d"
name = "ASCII-d"
version = "0.2.0"
